--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,18 +6,19 @@
 #    By: tde-sous <tde-sous@42.porto.com>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/03 14:47:04 by tde-sous          #+#    #+#              #
-#    Updated: 2022/11/03 15:46:33 by tde-sous         ###   ########.fr        #
+#    Updated: 2022/11/03 20:08:01 by tde-sous         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = teste
 
-SRC = source.clean
+SRC = Exec
 
-all: $(NAME)
+all:
+	cc -Wall -Wextra -Werror -o $(NAME) *.o
 
-$(NAME):
-	gcc -o $(NAME) $(SRC)
+ola:
+	cc -c *.c
 
 clean:
 	rm -f *.o
