+Novas funcoes +Makefile Corrigido +Libft-unit-test

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,24 +6,44 @@
 #    By: tde-sous <tde-sous@42.porto.com>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/03 14:47:04 by tde-sous          #+#    #+#              #
-#    Updated: 2022/11/03 20:08:01 by tde-sous         ###   ########.fr        #
+#    Updated: 2022/11/04 20:46:47 by tde-sous         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = teste
 
-SRC = Exec
+CC		= cc
+CFLAGS	= -Wall -Wextra -Werror
+LIB1	= ar -rcs
+LIB2	= ranlib
+RM		= /bin/rm -f
 
-all:
-	cc -Wall -Wextra -Werror -o $(NAME) *.o
+NAME	= libft.a
 
-ola:
-	cc -c *.c
+INCLUDE	= libft.h
+SRCS	= ft_isascii.c ft_isprint.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
+			ft_tolower.c ft_toupper.c ft_strlen.c ft_strlcpy.c ft_strlcat.c \
+			ft_strchr.c ft_strncmp.c  ft_memset.c ft_bzero.c ft_memcpy.c\
+			ft_memchr.c ft_memcmp.c  ft_memmove.c \
+			
+OBJS	= $(SRCS:.c=.o)
+
+all:		$(NAME)
+
+$(NAME):	$(OBJS) $(INCLUDE)
+			$(LIB1) $(NAME) $(OBJS)
+			$(LIB2) $(NAME)
+
+.c.o:
+			$(CC) $(CFLAGS) -c $< -o $(<:.c=.o)
 
 clean:
-	rm -f *.o
+			$(RM) $(OBJS)
 
-fclean: clean
-	rm -f $(NAME)
+fclean:		clean
+			$(RM) $(NAME)
 
-re: fclean all
+re:			fclean all
+
+so:
+	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRCS)
+	cc -nostartfiles -shared -o libft.so $(OBJS)
