--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: tde-sous <tde-sous@42.porto.com>           +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/11/03 14:47:04 by tde-sous          #+#    #+#              #
-#    Updated: 2022/11/04 20:46:47 by tde-sous         ###   ########.fr        #
+#    Updated: 2022/11/05 11:54:51 by tde-sous         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,8 @@ INCLUDE	= libft.h
 SRCS	= ft_isascii.c ft_isprint.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 			ft_tolower.c ft_toupper.c ft_strlen.c ft_strlcpy.c ft_strlcat.c \
 			ft_strchr.c ft_strncmp.c  ft_memset.c ft_bzero.c ft_memcpy.c\
-			ft_memchr.c ft_memcmp.c  ft_memmove.c \
+			ft_memchr.c ft_memcmp.c  ft_memmove.c ft_strrchr.c ft_strnstr.c \
+			ft_atoi.c \
 			
 OBJS	= $(SRCS:.c=.o)
 
@@ -46,4 +47,4 @@ re:			fclean all
 
 so:
 	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRCS)
-	cc -nostartfiles -shared -o libft.so $(OBJS)
+	$(CC) -nostartfiles -shared -o libft.so $(OBJS)
