--- a/libft/Makefile
+++ b/libft/Makefile
@@ -8,8 +8,8 @@
 ################################################################################
 
 NAME        := a.out
-CC        := clang
-FLAGS    := -Wall -Wextra -Werror 
+CC        := cc
+FLAGS    := -Wall -Wextra -Werror -fPIC
 ################################################################################
 #                                 PROGRAM'S SRCS                               #
 ################################################################################
@@ -19,14 +19,11 @@ SRCS        :=      ft_strchr.c \
                           ft_strrchr.c \
                           ft_isalpha.c \
                           ft_strlen.c \
-                          main.c \
                           ft_tolower.c \
                           ft_atoi.c \
                           ft_isalnum.c \
                           ft_isprint.c \
-                          ft_strnstr.c \
                           ft_strncmp.c \
-                          ft_memmove.c \
                           ft_toupper.c \
                           ft_bzero.c \
                           ft_memchr.c \
@@ -36,7 +33,13 @@ SRCS        :=      ft_strchr.c \
                           ft_memcmp.c \
                           ft_isascii.c \
                           ft_memcpy.c \
-                          
+                          ft_memmove.c \
+                          ft_calloc.c \
+                          ft_strdup.c \
+                          ft_strnlen.c \
+                          ft_strnstr.c \
+                          main.c \
+                           #ft_strnstr.c
 OBJS        := $(SRCS:.c=.o)
 
 .c.o:
@@ -75,8 +78,8 @@ fclean:		clean
 re:			fclean all
 
 so:
-	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRCS)
-	cc -nostartfiles -shared -o libft.so $(OBJS)
+	${CC} -nostartfiles -fPIC $(FLAGS) $(SRCS)
+	${CC} -nostartfiles -shared -o libft.so $(OBJS)
 
 .PHONY:		all clean fclean re
 
