--- a/libft/Makefile
+++ b/libft/Makefile
@@ -9,7 +9,8 @@
 
 NAME        := a.out
 CC        := cc
-FLAGS    := -Wall -Wextra -Werror -fPIC
+FLAGS    := -Wall -Wextra -Werror   
+LIBC = ar rc
 ################################################################################
 #                                 PROGRAM'S SRCS                               #
 ################################################################################
