--- a/libft/Makefile
+++ b/libft/Makefile
@@ -26,6 +26,10 @@ SRCS = ft_strchr.c \
                           ft_substr.c \
                           ft_strjoin.c \
                           ft_strtrim.c  \
+                          ft_split.c \
+                          ft_itoa.c \
+                          ft_strmapi.c \
+                          ft_striteri.c \
                           ft_putchar_fd.c \
                           ft_putstr_fd.c \
                           ft_putendl_fd.c \
