--- a/libft/Makefile
+++ b/libft/Makefile
@@ -40,7 +40,11 @@ BNS_SRCS = ft_lstnew.c \
             ft_lstadd_front.c \
             ft_lstsize.c \
             ft_lstlast.c \
-            ft_lstadd_back.c \ 
+            ft_lstadd_back.c \
+            ft_lstdelone.c \
+            ft_lstclear.c \
+            ft_lstiter.c \
+            ft_lstmap.c \
 
 OBJS = $(SRCS:.c=.o)
 BNS_OBJS = $(BNS_SRCS:%.c=%.o)
